--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"example.aternos.ip",
-	"port": "25565",
-	"name": "afkbot1",
+	"ip":"cameleonbuild.aternos.me",
+	"port": "44825",
+	"name": "un_mec_normal",
 	"auto-night-skip":"true"
 }
